# pestcomp

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
plugins/PestComp/: DistrhoPluginInfo.h  Makefile  Plugin.cpp  UI.cpp
src/: gui.rs  lib.rs
